fixed footer added to resovle spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -278,11 +278,7 @@ text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         margin-bottom: 1em;
     }
 }
-@media  screen and (max-width:400px) {
-    .projectCard p{
-       
-    }
-}
+
 /*CONTACT*/
 /* #formHeader{
     color: var(--black);
